--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
 CCPLOT NEWS
 
+New in 1.4.4 (2010-09-02):
+
+    * Changed backend back from cairo to AGG (though not GTK AGG as before),
+      because matplotlib enforces limitation on the number of line points with
+      cairo to 18980, which is not enough for basemap.
+
 New in 1.4.3 (2010-08-18):
 
     * Fixed numpy include path in setup.py.
@@ -7,14 +13,14 @@ New in 1.4.3 (2010-08-18):
       is not required to be running.
     * Updated installation instructions in INSTALL.
 
-New in 1.42 (2010-06-11):
+New in 1.4.2 (2010-06-11):
 
     * Support for changing meridians and parallels through the meridiansbase,
       parallelsbase, nminormeridians and nminorparallels options.
     * Updated installation instructions in INSTALL.
     * Updated information in README.
 
-New in 1.41 (2010-05-13):
+New in 1.4.1 (2010-05-13):
 
     * Wrong dimension mapping of MODIS Swath near 180E was fixed.
     * Missing meridians on polar plots were fixed.
@@ -48,7 +54,7 @@ New in 1.4 (2010-05-07):
     * Insufficient memory error condition is now handled gracefully.
     * Colormap files are now searched for in some default locations first.
 
-New in 1.31 (2009-09-21):
+New in 1.3.1 (2009-09-21):
 
     * Fixed CALIPSO plots time extent bug.
 
@@ -57,7 +63,7 @@ New in 1.3 (2009-09-20):
     * Changed the semantics of -x command-line argument.
     * Added support for time extent.
 
-New in 1.21 (2009-08-20):
+New in 1.2.1 (2009-08-20):
 
 	* Fixed layer products precision error.
 
