--- a/man/ccplot.1
+++ b/man/ccplot.1
@@ -1,145 +1,452 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "CCPLOT" "1" "June 2013" "" ""
+.TH "CCPLOT" "1" "November 2013" "" ""
 .
 .SH "NAME"
-\fBccplot\fR \- CloudSat and CALIPSO data plotting tool
+\fBccplot\fR \- CloudSat and CALIPSO plotting tool
 .
 .SH "SYNOPSIS"
-\fBccplot\fR [\fB\-a\fR \fIratio\fR] [\fB\-c\fR \fIcmapfile\fR] [\fB\-d\fR \fIdpi\fR] [\fB\-m\fR \fIband\fR] [\fB\-o\fR \fIoutfile\fR] [\fB\-p\fR \fIprojection\fR[:\fIprojoptions\fR]] [\fB\-r\fR \fIradius\fR] [\fB\-v\fR] [\fB\-x\fR \fIextent\fR] [\fB\-y\fR \fIextent\fR] [\fB\-z\fR \fIoptions\fR] type file \.\.\. \fBccplot\fR \fB\-i\fR \fIfile\fR \fBccplot\fR \fB\-h\fR \fBccplot\fR \fB\-V\fR
+\fBccplot\fR [\fB\-v\fR] [\fB\-a\fR \fIratio\fR] [\fB\-c\fR \fIfile\fR] [\fB\-d\fR \fIdpi\fR] [\fB\-m\fR \fIband\fR] [\fB\-o\fR \fIfile\fR] [\fB\-p\fR \fIproj\fR[:\fIprojopts\fR]] [\fB\-r\fR \fIradius\fR] [\fB\-x\fR \fIextent\fR] [\fB\-y\fR \fIextent\fR] [\fB\-z\fR \fIoptions\fR] \fItype\fR \fIfile\fR\.\.\.
+.
+.br
+\fBccplot\fR \fB\-i\fR \fIfile\fR
+.
+.br
+\fBccplot\fR \fB\-h\fR
+.
+.br
+\fBccplot\fR \fB\-V\fR
 .
 .SH "DESCRIPTION"
-ccplot is a tool that produces 2D plots of data stored in CloudSat, CALIPSO and MODIS HDF files\. The plot \fItype\fR can be one of:
+ccplot is a command\-line program for producing plots from CloudSat, CALIPSO and MODIS product files\.
+.
+.P
+The program reads data from \fIfile\fR, and produces an image file\. Dataset to be plotted is determined by \fItype\fR:
+.
+.TP
+\fBcloudsat\-reflec\fR
+CloudSat Reflectivity Factor
+.
+.TP
+\fBcalipso532\fR
+CALIPSO L1B Total Attenuated Backscatter 532nm
+.
+.TP
+\fBcalipso532p\fR
+CALIPSO L1B Perpendicular Attenuated Backscatter 532nm
+.
+.TP
+\fBcalipso1064\fR
+CALIPSO L1B Attenuated Backscatter 1064nm
+.
+.TP
+\fBcalipso\-cratio\fR
+CALIPSO L1B Attenuated Color Ratio 1064nm/532nm
+.
+.TP
+\fBcalipso\-dratio\fR
+CALIPSO L1B Depolarization Ratio
+.
+.TP
+\fBcalipso532\-layer\fR
+CALIPSO L2 Integrated Attenuated Backscatter 532nm
+.
+.TP
+\fBcalipso1064\-layer\fR
+CALIPSO L2 Integrated Attenuated Backscatter 1064nm
+.
+.TP
+\fBcalipso\-cratio\-layer\fR
+CALIPSO L2 Integrated Attenuated Total Color Ratio 1064nm/532nm
+.
+.TP
+\fBcalipso\-dratio\-layer\fR
+CALIPSO L2 Integrated Volume Depolarization Ratio
+.
+.TP
+\fBcalipso\-temperature\-layer\fR
+CALIPSO L2 Midlayer Temperature
+.
+.TP
+\fBorbit\fR
+Map of the globe showing CALIPSO or CloudSat trajectory, optionally superimposed on MODIS swath (if a MODIS HDF product is supplied as the first file)\.
+.
+.TP
+\fBorbit\-clipped\fR
+The same as \fBorbit\fR, but clipped to the area where MODIS data is available\.
+.
+.SH "OPTIONS"
+.
+.TP
+\fB\-a\fR \fIratio\fR
+Aspect ratio of profile and layer products in km horizontal per km vertical\. Default: \fI14\.0\fR\.
+.
+.TP
+\fB\-c\fR \fIfile\fR
+Colormap definition file (\fI\.cmap\fR)\. Apart from an absolute path, paths relative to \fBCCPLOT_CMAP_PATH\fR environment variable are also recognized, and take precedence over paths relative to the current working directory\. See Chapter 6 of Kuma (2010) for more information about the format of cmap files\.
+.
+.TP
+\fB\-d\fR \fIdpi\fR
+DPI (Dots Per Inch) of the output image file\.
+.
+.TP
+\fB\-m\fR \fIband\fR
+MODIS band specifier in the format \fBr\fR\fInumber\fR for reflective bands, and \fBx\fR\fInumber\fR for radiation bands, where \fInumber\fR is band number\.
+.
+.TP
+\fB\-o\fR \fIfile\fR
+Output image file\. Format is determined by extension: SVG (\fI\.svg\fR), PNG (\fI\.png\fR), PDF (\fI\.pdf\fR), EPS (\fI\.eps\fR) and PS (\fI\.ps\fR)\. Default: \fIccplot\.png\fR\.
+.
+.TP
+\fB\-p\fR \fIproj\fR[:\fIprojopts\fR]
+Projection and projection options\. Applies to \fBorbit\fR and \fBorbit\-clipped\fR plots\.
+.
+.IP
+\fB\-p help\fR prints a list of available projections\.
+.
+.IP
+\fIprojopts\fR are projection\-specific options, specified as a comma\-seperated list of \fIkey\fR\fB=\fR\fIvalue\fR pairs:
+.
+.TP
+\fBboundinglat\fR=\fIlatitude\fR
+Bounding latitude (polar projections)\.
+.
+.TP
+\fBlat_0\fR=\fIlatitude\fR
+Central latitude\.
+.
+.TP
+\fBlat_1\fR=\fIlatitude\fR
+First standard parallel\.
+.
+.TP
+\fBlat_2\fR=\fIlatitude\fR
+Second standard parallel\.
+.
+.TP
+\fBlat_ts\fR=\fIlatitude\fR
+Latitude of true scale\.
+.
+.TP
+\fBlon_1\fR=\fIlongitude\fR
+Longitude of one of the two points on the projection centerline (oblique mercator)\.
+.
+.TP
+\fBlon_2\fR=\fIlongitude\fR
+Longitude of one of the two points on the projection centerline (oblique mercator)\.
+.
+.IP
+\fIlongitude\fR is in the format \fInumber\fR\fBE\fR|\fBW\fR (East or West)\. \fIlatitude\fR is in the format \fInumber\fR\fBS\fR|\fBN\fR (South or North)\. \fInumber\fR is a positive decimal number in degrees\.
+.
+.TP
+\fB\-r\fR \fIradius\fR
+Interpolation radius in pixels\. In profile products radius specifies vertical extent which a data point is mapped onto\. If such vertical regions of two data points overlap value is determined by averaging with a weight coefficient of 1 over distance squared\. The same holds for swath products, but here radius specifies a square\. If radius is chosen too small relative to \fIdpi\fR, data will be plotted sparsely on the image\.
+.
+.IP
+Defaults to \fI3\fR for swath plots\. For profile products a sensible value is chosen automatically depending on resolution\.
+.
+.TP
+\fB\-v\fR
+Verbose mode\.
+.
+.TP
+\fB\-V\fR
+Print version information and exit\.
+.
+.TP
+\fB\-x\fR \fIextent\fR
+Horizontal extent to be plotted\. \fIextent\fR can be specified in a number of formats depending on the plot \fItype\fR\.
+.
+.IP
+For profile and layer products \fIextent\fR can be one of:
+.
+.TP
+\fIx1\fR\.\.\fIx2\fR
+Plot data between ray \fIx1\fR and \fIx2\fR\.
+.
+.TP
+\fIhour1\fR:\fImin1\fR[:\fIsec1\fR]\.\.\fIhour2\fR:\fImin2\fR[:\fIsec2\fR]
+Plot data in time interval (UTC)\.
+.
+.TP
++|\-[\fIhour\fR:]\fImin\fR:\fIsec\fR\.\.+|\-[\fIhour\fR:]\fImin\fR:\fIsec\fR
+Plot data in time interval relative to the beginning (+) or end (\-) of the granule\.
+.
+.IP
+For swath products \fIextent\fR can be one of:
+.
+.TP
+\fIx1\fR\.\.\fIx2\fR,\fIy1\fR\.\.\fIy2\fR
+Plot data between scanlines \fIx1\fR and \fIx2\fR (along\-track), and samples \fIy1\fR and \fIy2\fR (across\-track)\.
+.
+.TP
+\fIlon1\fR\.\.\fIlon2\fR,\fIlat1\fR\.\.\fIlat2\fR
+Plot data inside geographical region between latitude \fIlat1\fR and \fIlat2\fR and longitude \fIlon1\fR and \fIlon2\fR\.
+.
+.IP
+Longitude is in the format \fInumber\fR\fBE\fR|\fBW\fR (East or West)\. Latitude is in the format \fInumber\fR\fBS\fR|\fBN\fR (South or North)\. \fInumber\fR is a positive decimal number in degrees\.
+
+.
+.TP
+\fB\-y\fR \fIextent\fR
+Vertical extent of profile plots in the format \fIy1\fR\.\.\fIy2\fR, where \fIy1\fR and \fIy2\fR are the lower and upper boundary (resp\.) in meters above sea level\.
+.
+.TP
+\fB\-z\fR \fIoptions\fR
+Miscellaneous formatting options\. \fIoptions\fR is a comma\-separated list of \fIkey\fR\fB=\fR\fIvalue\fR pairs\. Some options accept a list of values seperated by colon in the format \fIkey\fR=\fIvalue1\fR:\fIvalue2\fR[:\fIvalue\fR]\.\.\. \.
+.
+.IP
+\fB\-z help\fR prints a list of all options\.
+.
+.IP
+Available common options:
+.
+.TP
+\fBcbfontsize\fR
+Color bar font size\. Default: \fI8\fR\.
+.
+.TP
+\fBcbspacing\fR
+Spacing between axes and color bar\. Default: \fI0\.4\fR\.
+.
+.TP
+\fBdrawelev\fR
+Draw surface elevation line (CALIPSO)\. Default: \fI1\fR\.
+.
+.TP
+\fBelevlw\fR
+Surface elevation line width\. Default: \fI0\.5\fR\.
+.
+.TP
+\fBelevcolor\fR
+Surface elevation line color\. Default: \fI#FF0000\fR\.
+.
+.TP
+\fBfontsize\fR
+Font size\. Default: \fI10\fR\.
+.
+.TP
+\fBpadding\fR
+Padding around axes and color bar in inches\. Default: \fI1\fR\.
+.
+.TP
+\fBplotheight\fR
+Plot height in inches\. Default: \fI6\fR\.
+.
+.TP
+\fBtitle\fR
+Figure title\. Default: automatic\.
+.
+.IP
+Orbit plots support additional options:
+.
+.TP
+\fBcoastlinescolor\fR
+Coastlines color\. Default: \fI#46396D\fR\.
+.
+.TP
+\fBcoastlineslw\fR
+Coastlines line width\. Default: \fI0\.4\fR\.
+.
+.TP
+\fBcountriescolor\fR
+Countries outlines color\. Default: \fI#46396D\fR\.
+.
+.TP
+\fBcountrieslw\fR
+Countries outlines line width\. Default: \fI0\.2\fR\.
+.
+.TP
+\fBdrawcoastlines\fR
+Draw coastlines\. Default: \fI1\fR\.
+.
+.TP
+\fBdrawcountries\fR
+Draw countries outlines\. Default: \fI1\fR\.
+.
+.TP
+\fBdrawlakes\fR
+Draw lakes\. Default: \fI1\fR\.
+.
+.TP
+\fBdrawlsmask\fR
+Draw land\-sea mask\. Default: \fI1\fR\.
+.
+.TP
+\fBdrawmeridians\fR
+Draw meridians\. Default: \fI1\fR\.
+.
+.TP
+\fBdrawminormeridians\fR
+Draw meridians\. Default: \fI1\fR\.
+.
+.TP
+\fBdrawminorparallels\fR
+Draw minor parallels\. Default: \fI1\fR\.
+.
+.TP
+\fBdrawparallels\fR
+Draw parallels\. Default: \fI1\fR\.
+.
+.TP
+\fBlandcolor\fR
+Land color\. Default: \fI#E9E4F7\fR\.
+.
+.TP
+\fBmajormeridianscolor\fR
+Major meridians color\. Default: \fI#000000\fR\.
+.
+.TP
+\fBmajormeridianslw\fR
+Major meridians line width\. Default: \fI0\.3\fR\.
+.
+.TP
+\fBmajorparallelscolor\fR
+Major parallels line color\. Default: \fI#000000\fR\.
+.
+.TP
+\fBmajorparallelslw\fR
+Major parallels line width\. Default: \fI0\.3\fR\.
+.
+.TP
+\fBmapres\fR
+Map resolution: c (crude), l (low), i (intermediate), h (high), f (full)\. Default: \fIi\fR\.
+.
+.TP
+\fBmeridiansbase\fR
+Meridians base, or 0 for automatic\. Default: \fI0\fR\.
+.
+.TP
+\fBminormeridianscolor\fR
+Minor meridians color\. Default: \fI#000000\fR\.
+.
+.TP
+\fBminormeridianslw\fR
+Minor meridians line width\. Default: \fI0\.1\fR\.
+.
+.TP
+\fBminorparallelscolor\fR
+Minor parallels color\. Default: \fI#000000\fR\.
+.
+.TP
+\fBminorparallelslw\fR
+Minor parallels line width\. Default: \fI0\.1\fR\.
+.
+.TP
+\fBnminormeridians\fR
+Number of minor meridians between two major maridians, or 0 for automatic\. Default: \fI0\fR\.
+.
+.TP
+\fBnminorparallels\fR
+Number of minor parallels between two major parallels, or 0 for automatic\. Default: \fI0\fR\.
+.
+.TP
+\fBparallelsbase\fR
+Parallels base, or 0 for automatic\. Default: \fI0\fR\.
+.
+.TP
+\fBtrajcolors\fR
+List of trajectory colors\. Default: \fI#FF0000:#0000FF:#00FF00\fR\.
+.
+.TP
+\fBtrajlws\fR
+List of trajectory line widths\. Default: \fI0\.5\fR\.
+.
+.TP
+\fBtrajnminortics\fR
+Number of minor ticks between adjecent major ticks, or \-1 for automatic selection\. Default: \fI\-1\fR\.
+.
+.TP
+\fBtrajticks\fR
+Base for trajectory major ticks in seconds, or \-1 for automatic selection\. Default: \fI\-1\fR\.
+.
+.TP
+\fBwatercolor\fR
+Water color\. Default: \fI#FFFFFF\fR\.
+
+.
+.SH "EXAMPLES"
+.
+.IP "\(bu" 4
+Plot the first 1000 rays of CloudSat Reflectivity Factor with colormap \fIcloudsat\-reflec\.cmap\fR into \fIcloudsat\-reflec\.png\fR:
 .
 .IP "" 4
 .
 .nf
 
-cloudsat\-reflec            CloudSat Reflectivity Factor
-calipso532                 CALIPSO L1B Total Attenuated Backscatter 532nm
-calipso532p                CALIPSO L1B Perpendicular Attenuated Backscatter 532nm
-calipso1064                CALIPSO L1B Attenuated Backscatter 1064nm
-calipso\-cratio             CALIPSO L1B Attenuated Color Ratio 1064nm/532nm
-calipso\-dratio             CALIPSO L1B Depolarization Ratio
-calipso532\-layer           CALIPSO L2 Integrated Attenuated Backscatter 532nm
-calipso1064\-layer          CALIPSO L2 Integrated Attenuated Backscatter 1064nm
-calipso\-cratio\-layer       CALIPSO L2 Integrated Attenuated Total Color Ratio 1064nm/532nm
-calipso\-dratio\-layer       CALIPSO L2 Integrated Volume Depolarization Ratio
-calipso\-temperature\-layer  CALIPSO L2 Midlayer Temperature
-orbit                      map projection of CALIPSO and CloudSat trajectory, and Aqua MODIS radiance or
-                        reflectance swath depending on files supplied
-orbit\-clipped              MODIS\-region\-clipped map projection of CALIPSO and CloudSat trajectory, and Aqua
-                        MODIS radiance or reflectance swath depending on files supplied
+ccplot \-x 0\.\.1000 \-c cloudsat\-reflectivity\.cmap \-o cloudsat\-reflec\.png cloudsat\-reflec 2006224184641_01550_CS_2B\-GEOPROF_GRANULE_P_R03_E01\.hdf
 .
 .fi
 .
 .IP "" 0
-.
-.P
-The options are as follows:
+
 .
 .IP "\(bu" 4
-\fB\-a\fR ratio Aspect ratio of profile and layer products in km horizontal per km vertical\. Defaults to 14\.0\.
+Plot the first minute of CALIPSO Total Attenuated Backscatter 532nm between altitude 0 and 20 km with colormap \fIcalipso\-backscatter\.cmap\fR into \fIcalipso532\.png\fR:
+.
+.IP "" 4
+.
+.nf
+
+ccplot \-y 0\.\.20000 \-x +0:00\.\.+1:00 \-c calipso\-backscatter\.cmap \-o calipso532\.png calipso532 CAL_LID_L1\-Prov\-V2\-01\.2006\-07\-06T19\-50\-51ZN\.hdf
+.
+.fi
+.
+.IP "" 0
+
 .
 .IP "\(bu" 4
-\fB\-c\fR cmapfile
+Plot CALIPSO trajectory superimposed on Aqua MODIS band 31 radiance with colormap \fImodis\-temperature\.cmap\fR into \fIorbit\-calipso\.png\fR:
 .
-.IP "\(bu" 4
-\fB\-d\fR dpi DPI of outfile if a raster image is to be output\.
+.IP "" 4
 .
-.IP "\(bu" 4
-\fB\-m\fR band MODIS band specifier in the form r# for reflective bands and x# for radiation bands, where # is the band
+.nf
+
+ccplot \-m x31 \-c modis\-temperature\.cmap \-p tmerc \-o orbit\-calipso\.png orbit\-clipped MYD021KM\.A2006224\.1945\.005\.2007140113559\.hdf CAL_LID_L1\-Prov\-V2\-01\.2006\-07\-06T19\-50\-51ZN\.hdf
 .
-.IP "\(bu" 4
-\fB\-o\fR outfile Output file\. Format is determined by extension Supported formats are SVG (\.svg), PNG (\.png), PDF (\.pdf),
+.fi
 .
-.IP "\(bu" 4
-\fB\-p\fR projection[:projoptions]
-.
-.IP "\(bu" 4
-\fB\-r\fR radius Interpolation radius in pixels\. In profile products radius specifies vertical extent which a data point
-.
-.IP "\(bu" 4
-\fB\-v\fR Enable verbose mode\.
-.
-.IP "\(bu" 4
-\fB\-V\fR Print version information and exit\.
-.
-.IP "\(bu" 4
-\fB\-x\fR extent Horizontal region to be plotted\. extent can be specified in a number of formats depending on the plot
-.
-.IP "\(bu" 4
-\fB\-y\fR extent Vertical extent of CloudSat and CALIPSO profiles in meters in the form from\.\.to\.
-.
-.IP "\(bu" 4
-\fB\-z\fR options Miscellaneous options that modifiy plot formatting\. options is a list of comma separeted key=value
+.IP "" 0
+
 .
 .IP "" 0
 .
 .SH "ENVIRONMENT"
-\fBCCPLOT_CMAP_PATH\fR Colon\-separated list of search paths for colormap files\.
+.
+.TP
+\fBCCPLOT_CMAP_PATH\fR
+Colon\-separated list of search paths of colormap files\.
 .
 .SH "FILES"
-\fB/usr/share/ccplot/cmap/*\fR Example cmap files\.
 .
-.SH "EXAMPLES"
-Plot the first 1000 rays of CloudSat reflectivity profile from 2006224184641_01550_CS_2B\-GEOPROF_GRAN‐ ULE_P_R03_E01\.hdf using cloudsat\-reflec\.cmap colormap, and save it as cloudsat\-reflec\.png:
+.TP
+\fB/usr/share/ccplot/cmap/*\fR
+Stock colormap files\.
 .
-.IP "" 4
-.
-.nf
-
-$ ccplot \-x 0\.\.1000 \-c cloudsat\-reflectivity\.cmap
-\-o cloudsat\-reflec\.png cloudsat\-reflec
-2006224184641_01550_CS_2B\-GEOPROF_GRANULE_P_R03_E01\.hdf
-.
-.fi
-.
-.IP "" 0
-.
-.P
-Plot the first minute of CALIPSO backscatter profile from 0 to 20km using calipso\-backscatter\.cmap colormap, and save it as calipso532\.png:
-.
-.IP "" 4
-.
-.nf
-
-$ ccplot \-y 0\.\.20000 \-x +0:00\.\.+1:00 \-c calipso\-backscatter\.cmap
-\-o calipso532\.png calipso532
-CAL_LID_L1\-Prov\-V2\-01\.2006\-07\-06T19\-50\-51ZN\.hdf
-.
-.fi
-.
-.IP "" 0
-.
-.P
-Plot map projection of CALIPSO trajectory superimposed on Aqua MODIS band 31 radiance using modis\-temperature\.cmap colormap, and save it as orbit\-calipso\.png:
-.
-.IP "" 4
-.
-.nf
-
-$ ccplot \-m x31 \-c modis\-temperature\.cmap \-p tmerc
-\-o orbit\-calipso\.png orbit\-clipped
-MYD021KM\.A2006224\.1945\.005\.2007140113559\.hdf
-CAL_LID_L1\-Prov\-V2\-01\.2006\-07\-06T19\-50\-51ZN\.hdf
-.
-.fi
-.
-.IP "" 0
-.
-.SH "SEE ALSO"
-\fICloudSat Standard Data Products Handbook, April 25th, 2008\.\fR
-.
-.P
-\fICALIPSO Data Products Catalog Release 2\.4, December 2007\.\fR
-.
-.P
-\fIMODIS Level 1B Product User\'s Guide, December 1, 2005\.\fR
-.
-.SH "AUTHORS"
+.SH "AUTHOR"
 \fBccplot\fR was written by Peter Kuma\.
 .
-.SH "CAVEATS"
+.SH "REFERENCES"
+.
+.IP "\(bu" 4
+Kuma, P\. (2010)\. Visualising Data from CloudSat and CALIPSO Satellites\. Bachelor\'s thesis, Comenius University\.
+.
+.IP "\(bu" 4
+CloudSat Standard Data Products Handbook
+.
+.IP "\(bu" 4
+CALIPSO Data Products Catalog Release 2\.4
+.
+.IP "\(bu" 4
+MODIS Level 1B Product User\'s Guide
+.
+.IP "" 0
+.
+.SH "KNOWN ISSUES"
+.
+.IP "\(bu" 4
 Plot size is limited to 32767 pixels\.
+.
+.IP "" 0
+
