--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 CCPLOT NEWS
 
+New in 1.5.6 (2021-03-26):
+
+    * Fixed an integer division issue in argument parsing on Python 3.
+
 New in 1.5.5 (2021-03-16):
 
     * Fixed deprecation warnings in recent versions of numpy and matplotlib.
