Add missing UTM zone projection option

--- a/man/ccplot.1
+++ b/man/ccplot.1
@@ -107,6 +107,9 @@ Central rotated longitude (rotated pole projection)\.
 .TP
 \fBsweep\fR=\fIaxis\fR
 Sweep axis: "x" or "y" (geostationary projection)\.
+.TP
+\fBzone\fR=\fIzone\fR
+UTM zone (1 to 60)\.
 .IP
 \fIlongitude\fR is in the format \fInumber\fR\fBE\fR|\fBW\fR (East or West)\. \fIlatitude\fR is in the format \fInumber\fR\fBS\fR|\fBN\fR (South or North)\. \fInumber\fR is a positive decimal number in degrees\.
 .TP
