Update mapres option to support cartopy

--- a/man/ccplot.1
+++ b/man/ccplot.1
@@ -240,7 +240,7 @@ Major parallels line color\. Default: \fI#000000\fR\.
 Major parallels line width\. Default: \fI0\.3\fR\.
 .TP
 \fBmapres\fR
-Map resolution: c (crude), l (low), i (intermediate), h (high), f (full)\. Default: \fIi\fR\.
+Map resolution: auto (automatic), 10m (1:10m) 50m (1:50m), 110m (1:110m)\. Default: \fIauto\fR\.
 .TP
 \fBmeridiansbase\fR
 Meridians base, or 0 for automatic\. Default: \fI0\fR\.
