--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 CCPLOT NEWS
 
+New in 2.1.1 (2021-01-23)
+
+    * Fix building of Python wheel on Windows (missing DLLs).
+
 New in 2.1.0 (2021-11-28)
 
     * Support for text encoding in the API.
