--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 CCPLOT NEWS
 
+New in 2.1.3 (2023-08-18)
+
+    * Support for installing with pipx.
+
 New in 2.1.2 (2023-06-20)
 
     * Support for Anaconda Python 3.10 on Windows.
