--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 CCPLOT NEWS
 
+New in 2.1.4 (2023-09-08)
+
+    * Support for installation on Windows with Python 3.11.
+
 New in 2.1.3 (2023-08-18)
 
     * Support for installing with pipx.
